# algebra

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  todo.tasks
.github/workflows/: ci.yml  publish.yml
algebra/: __init__.py  algebra.py  function.py  pretty.py  util.py
algebra/elements/: add.py  diff.py  select.py  stretch.py
algebra/ops/: __init__.py  add.py  diff.py  mul.py  reverse.py  select.py  shift.py  stretch.py  tensor.py  transform.py
docs/: Makefile  api.rst  conf.py
ring/: __init__.py  add.py  function.py  mul.py  pretty.py  ring.py  util.py
ring/elements/: add.py  diff.py  mul.py  reverse.py  select.py  shift.py  stretch.py  tensor.py  transform.py
tests/: test_add.py  test_algebra.py  test_function.py  test_mul.py  test_pretty.py  test_ring.py  test_util.py  util.py
